--- a/book.toml
+++ b/book.toml
@@ -3,7 +3,7 @@ authors = ["Liangdi"]
 language = "en"
 multilingual = false
 src = "src"
-title = "开发者日记"
+title = "『未命名产品』渐进式开发者日记"
 
 
 [output.html]
